--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,6 @@ encoding//src/model1/TestFunc.py=utf-8
 encoding//src/model1/TestList.py=utf-8
 encoding//src/model1/TestLoop.py=utf-8
 encoding//src/model1/TestString.py=utf-8
+encoding//src/model2/import_model.py=utf-8
 encoding//src/model2/test_high_func.py=utf-8
+encoding//src/model2/test_model.py=utf-8
