--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,11 @@
 eclipse.preferences.version=1
+encoding//src/model1/TestDict.py=utf-8
 encoding//src/model1/TestFunc.py=utf-8
 encoding//src/model1/TestList.py=utf-8
 encoding//src/model1/TestLoop.py=utf-8
+encoding//src/model1/TestSet.py=utf-8
 encoding//src/model1/TestString.py=utf-8
+encoding//src/model1/TestTuple.py=utf-8
 encoding//src/model2/import_model.py=utf-8
 encoding//src/model2/test_high_func.py=utf-8
 encoding//src/model2/test_model.py=utf-8
