--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,4 +9,6 @@ encoding//src/model1/TestTuple.py=utf-8
 encoding//src/model2/import_model.py=utf-8
 encoding//src/model2/test_high_func.py=utf-8
 encoding//src/model2/test_model.py=utf-8
+encoding//src/model3/DiyClass.py=utf-8
 encoding//src/model3/Person.py=utf-8
+encoding//src/model4/TestException.py=utf-8
