--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,3 +12,4 @@ encoding//src/model2/test_model.py=utf-8
 encoding//src/model3/DiyClass.py=utf-8
 encoding//src/model3/Person.py=utf-8
 encoding//src/model4/TestException.py=utf-8
+encoding//src/model4/TestIO.py=utf-8
