添加正则表达式练习

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,3 +13,4 @@ encoding//src/model3/DiyClass.py=utf-8
 encoding//src/model3/Person.py=utf-8
 encoding//src/model4/TestException.py=utf-8
 encoding//src/model4/TestIO.py=utf-8
+encoding//src/model4/TestRegex.py=utf-8
